# py0

./: .gitpod.yml  README.md  qwerty.py  setup.cfg  start.py  tmp.txt
data/: words.txt
src/: __init__.py  qwerty.py
