[metadata]
name = lib-vlakondra
version = 0.0.5
author = vlakondra
author_email = vkondra@gmail.com
description = A small library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vlakondra/py0
project_urls =
    Bug Tracker = https://github.com/vlakondra/py0/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src_code
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src_code